--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>eBooks</title>
+    
+    <script type="module" src="js/main.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+ <link rel="stylesheet" href="scss/styles.scss">
+      </head>
 <body>
-    <main class="bg-primary">
+    <div="bg-primary">
         <nav class="navbar navbar-expand-lg bg-primary container" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">eBooks</a>
+                <a class="navbar-brand" href="index.html">eBooks</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -51,9 +54,254 @@
                 </div>
             </div>
         </nav>
-    </main>
+    </div>
+    <header>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000"
+            style="background-image: url('./assets/images/book-1.jpg');background-size: cover;background-position: center; min-height: 500px; background-repeat: no-repeat;">
+            <!-- <img src="./assets/images/book-1.jpg" class="d-block w-100" alt="Book 1"> -->
+            <div class="carousel-caption d-none d-md-block bg-white bg-opacity-75 px-4">
+                <h1 class="text-primary">Whispers of the Forgotten World <small class="text-success">By Eleanor
+                        Drake</small></h1>
+                <p class="lead">In a distant land hidden from modern civilization, a young archaeologist
+                    stumbles upon an ancient map that reveals the existence of a forgotten world.</p>
+                <button class="btn btn-primary">Read More</button>
+            </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="2000"
+            style="background-image: url('./assets/images/book-2.jpg');background-size: cover;background-position: center; min-height: 500px; background-repeat: no-repeat;">
+            <!-- <img src="./assets/images/book-2.jpg" class="d-block w-100" alt="Book 2"> -->
+            <div class="carousel-caption d-none d-md-block bg-white bg-opacity-75 px-4">
+                <h1 class="text-primary">The Silent Symphony <small class="text-success">By Caleb
+                        Morrigan</small></h1>
+                <p class="lead">In a city where noise has been outlawed, people communicate through gestures and
+                    expressions, living in a world of silence.</p>
+                <button class="btn btn-primary">Read More</button>
+            </div>
+        </div>
+        <div class="carousel-item"
+            style="background-image: url('./assets/images/book-3.jpg');background-size: cover;background-position: center; min-height: 500px; background-repeat: no-repeat;">
+            <!-- <img src="./assets/images/book-3.jpg" class="d-block w-100" alt="Book 3"> -->
+            <div class="carousel-caption d-none d-md-block bg-white bg-opacity-75 px-4">
+                <h1 class="text-primary">Beneath the Iron Skies <small class="text-success">By Rosa
+                        Valenti</small></h1>
+                <p class="lead">n a dystopian future where the sky has been replaced by a sprawling network of
+                    iron and steel, the remnants of humanity live in towering cities governed by an oppressive
+                    regime.</p>
+                <button class="btn btn-primary">Read More</button>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
 
-    <h1>Home</h1>
+    </header>
+      <main class="container py-5">
+        <h2 class="text-center mb-5 display-5">Featured Books</h2>
+        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4">
+            <!-- Book 1 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/200x120.png?text=Book+1" class="card-img-top" alt="Book 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Whispers of the Forgotten World</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">by Eleanor Drake</h6>
+                        <p class="card-text fw-bold">₹1249.17</p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="#" class="btn btn-primary">View Details</a>
+                        <a href="#" class="btn btn-success">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+              <div class="card h-100">
+                  <img src="https://via.placeholder.com/200x120.png?text=Book+2" class="card-img-top" alt="Book 2">
+                  <div class="card-body">
+                      <h5 class="card-title">The Silent Symphony</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">by Caleb Morrigan</h6>
+                      <p class="card-text fw-bold">₹912.49</p>
+                  </div>
+                  <div class="card-footer d-flex justify-content-between">
+                      <a href="#" class="btn btn-primary">View Details</a>
+                      <a href="#" class="btn btn-success">Buy Now</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100">
+                <img src="https://via.placeholder.com/200x120.png?text=Book+3" class="card-img-top" alt="Book 3">
+                <div class="card-body">
+                    <h5 class="card-title">Beneath the Iron Skies</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">by Rosa Valenti</h6>
+                    <p class="card-text fw-bold">₹1415.83</p>
+                </div>
+                <div class="card-footer d-flex justify-content-between">
+                    <a href="#" class="btn btn-primary">View Details</a>
+                    <a href="#" class="btn btn-success">Buy Now</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100">
+              <img src="https://via.placeholder.com/200x120.png?text=Book+4" class="card-img-top" alt="Book 4">
+              <div class="card-body">
+                  <h5 class="card-title">Echoes of the Eternal Forest</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">by Aidan Wells</h6>
+                  <p class="card-text fw-bold">₹1582.50</p>
+              </div>
+              <div class="card-footer d-flex justify-content-between">
+                  <a href="#" class="btn btn-primary">View Details</a>
+                  <a href="#" class="btn btn-success">Buy Now</a>
+              </div>
+          </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100">
+            <img src="https://via.placeholder.com/200x120.png?text=Book+5" class="card-img-top" alt="Book 5">
+            <div class="card-body">
+                <h5 class="card-title">The Starlight Chronicles: Rise of the Fallen</h5>
+                <h6 class="card-subtitle mb-2 text-muted">by Jasper Quinn</h6>
+                <p class="card-text fw-bold">₹1665.83</p>
+            </div>
+            <div class="card-footer d-flex justify-content-between">
+                <a href="#" class="btn btn-primary">View Details</a>
+                <a href="#" class="btn btn-success">Buy Now</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 py-5">
+
+ <!-- Category 1 -->
+ <div class="col">
+  <div class="card h-100 category-card">
+      <div class="card-body text-center">
+          <h5 class="card-title">Fiction</h5>
+      </div>
+  </div>
+</div>
+
+  <!-- Category 2 -->
+  <div class="col">
+    <div class="card h-100 category-card">
+        <div class="card-body text-center">
+            <h5 class="card-title">Mystery & Thriller</h5>
+        </div>
+    </div>
+</div>
+
+ <!-- Category 3 -->
+ <div class="col">
+  <div class="card h-100 category-card">
+      <div class="card-body text-center">
+          <h5 class="card-title">Science Fiction</h5>
+      </div>
+  </div>
+</div>
+
+ <!-- Category 4 -->
+ <div class="col">
+  <div class="card h-100 category-card">
+      <div class="card-body text-center">
+          <h5 class="card-title">Biography</h5>
+      </div>
+  </div>
+</div>
+
+ <!-- Category 5 -->
+ <div class="col">
+  <div class="card h-100 category-card">
+      <div class="card-body text-center">
+          <h5 class="card-title">Romance</h5>
+      </div>
+  </div>
+</div>
+
+  <!-- Category 6 -->
+  <div class="col">
+    <div class="card h-100 category-card">
+        <div class="card-body text-center">
+            <h5 class="card-title">Fantasy</h5>
+        </div>
+    </div>
+</div>
+
+<!-- Category 7 -->
+<div class="col">
+  <div class="card h-100 category-card">
+      <div class="card-body text-center">
+          <h5 class="card-title">Self-Help</h5>
+      </div>
+  </div>
+</div>
+
+  <!-- Category 8 -->
+  <div class="col">
+    <div class="card h-100 category-card">
+        <div class="card-body text-center">
+            <h5 class="card-title">History</h5>
+        </div>
+    </div>
+</div>
+</div>
+</main>
+<div class="testimonial-slider py-5">
+  <div class="container">
+      <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                  <div class="testimonial-item">
+                      <p class="testimonial-text">"This product has completely transformed my workflow. I can't imagine working without it now!"</p>
+                      <p class="testimonial-user">John Doe</p>
+                      <p class="testimonial-place">New York, USA</p>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="testimonial-item">
+                      <p class="testimonial-text">"The customer support team is phenomenal. They went above and beyond to solve my issues."</p>
+                      <p class="testimonial-user">Jane Smith</p>
+                      <p class="testimonial-place">London, UK</p>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="testimonial-item">
+                      <p class="testimonial-text">"I've recommended this to all my colleagues. It's a game-changer for our industry."</p>
+                      <p class="testimonial-user">Mike Johnson</p>
+                      <p class="testimonial-place">Sydney, Australia</p>
+                  </div>
+              </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon text-primary" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+          </button>
+          <div class="carousel-indicators">
+              <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+      </div>
+  </div>
+</div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
