--- a/books/index.html
+++ b/books/index.html
@@ -7,13 +7,15 @@
     <title>eBooks | Books</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="assets/css/app.css">
 </head>
 
 <body>
-    <main class="bg-primary">
+    <header class="bg-primary">
         <nav class="navbar navbar-expand-lg bg-primary container" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">eBooks</a>
+                <a class="navbar-brand" href="../index.html">eBooks</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -22,10 +24,10 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../books/index.html">Books</a>
+                            <a class="nav-link active" aria-current="page" href="../books/index.html">Books</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../authors/index.html">Authors</a>
@@ -39,7 +41,8 @@
                     </ul>
                     <ul class="d-flex navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="../cart.html"><i class="bi bi-cart-fill" style="font-size: 1.2rem; color: white;"></i></a>
+                            <a class="nav-link" href="../cart.html"><i class="bi bi-cart-fill"
+                                    style="font-size: 1.2rem; color: white;"></i></a>
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-outline-light mx-4" href="../login.html">Login</a>
@@ -51,8 +54,209 @@
                 </div>
             </div>
         </nav>
+    </header>
+    <main class="container my-3 p-2">
+        <h1 class="text-center my-2">Books</h1>
+
+        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4">
+            <!-- Book 1 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/200x120.png?text=Book+1" class="card-img-top" alt="Book 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Whispers of the Forgotten World</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">by Eleanor Drake</h6>
+                        <p class="card-text fw-bold">₹1249.17</p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="./book-details.html" class="btn btn-primary">View Details</a>
+                        <a href="#" class="btn btn-success">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Book 2 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/200x120.png?text=Book+2" class="card-img-top" alt="Book 2">
+                    <div class="card-body">
+                        <h5 class="card-title">The Silent Symphony</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">by Caleb Morrigan</h6>
+                        <p class="card-text fw-bold">₹912.49</p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="./book-details.html" class="btn btn-primary">View Details</a>
+                        <a href="#" class="btn btn-success">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Book 3 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/200x120.png?text=Book+3" class="card-img-top" alt="Book 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Beneath the Iron Skies</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">by Rosa Valenti</h6>
+                        <p class="card-text fw-bold">₹1415.83</p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="./book-details.html" class="btn btn-primary">View Details</a>
+                        <a href="#" class="btn btn-success">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Book 4 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/200x120.png?text=Book+4" class="card-img-top" alt="Book 4">
+                    <div class="card-body">
+                        <h5 class="card-title">Echoes of the Eternal Forest</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">by Aidan Wells</h6>
+                        <p class="card-text fw-bold">₹1582.50</p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="./book-details.html" class="btn btn-primary">View Details</a>
+                        <a href="#" class="btn btn-success">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Book 5 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/200x120.png?text=Book+5" class="card-img-top" alt="Book 5">
+                    <div class="card-body">
+                        <h5 class="card-title">The Starlight Chronicles: Rise of the Fallen</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">by Jasper Quinn</h6>
+                        <p class="card-text fw-bold">₹1665.83</p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="./book-details.html" class="btn btn-primary">View Details</a>
+                        <a href="#" class="btn btn-success">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Book 6 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/200x120.png?text=Book+6" class="card-img-top" alt="Book 6">
+                    <div class="card-body">
+                        <h5 class="card-title">Shadows of the Forgotten War</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">by Diana Cross</h6>
+                        <p class="card-text fw-bold">$15.49</p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="./book-details.html" class="btn btn-primary">View Details</a>
+                        <a href="#" class="btn btn-success">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Book 7 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/200x120.png?text=Book+7" class="card-img-top" alt="Book 7">
+                    <div class="card-body">
+                        <h5 class="card-title">The Crystal Vault</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">by Nathan Green</h6>
+                        <p class="card-text fw-bold">$13.75</p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="./book-details.html" class="btn btn-primary">View Details</a>
+                        <a href="#" class="btn btn-success">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Book 8 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/200x120.png?text=Book+8" class="card-img-top" alt="Book 8">
+                    <div class="card-body">
+                        <h5 class="card-title">The Last Ember</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">by Violet Lane</h6>
+                        <p class="card-text fw-bold">$17.99</p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="./book-details.html" class="btn btn-primary">View Details</a>
+                        <a href="#" class="btn btn-success">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Book 9 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/200x120.png?text=Book+9" class="card-img-top" alt="Book 9">
+                    <div class="card-body">
+                        <h5 class="card-title">Rise of the Phoenix</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">by Leo Carter</h6>
+                        <p class="card-text fw-bold">$21.49</p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="./book-details.html" class="btn btn-primary">View Details</a>
+                        <a href="#" class="btn btn-success">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Book 10 -->
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/200x120.png?text=Book+10" class="card-img-top" alt="Book 10">
+                    <div class="card-body">
+                        <h5 class="card-title">The Forgotten Kingdom</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">by Emily Rose</h6>
+                        <p class="card-text fw-bold">$14.29</p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <a href="./book-details.html" class="btn btn-primary">View Details</a>
+                        <a href="#" class="btn btn-success">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Pagination -->
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center my-3 pagination-lg">
+                <li class="page-item disabled">
+                    <a class="page-link">Previous</a>
+                </li>
+                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- Pagination ends -->
     </main>
-    <h1>Books</h1>
+
+    <div class="bg-dark py-3">
+        <div class="container">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <div class="col-md-4 d-flex align-items-center">
+                    <a href="/" class="mb-3 me-2 mb-md-0 text-white text-decoration-none lh-1">
+                        <svg class="bi" width="30" height="24">
+                            <use xlink:href="#bootstrap"></use>
+                        </svg>
+                    </a>
+                    <span class="mb-3 mb-md-0 text-white">© 2024 Company, Inc</span>
+                </div>
+
+                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+                    <li class="ms-3"><a class="text-white" href="#"><i class="bi bi-twitter"></i></a></li>
+                    <li class="ms-3"><a class="text-white" href="#"><i class="bi bi-instagram"></i></a></li>
+                    <li class="ms-3"><a class="text-white" href="#"><i class="bi bi-facebook"></i></a></li>
+                </ul>
+            </footer>
+        </div>
+    </div>
 </body>
 
 </html>
