--- a/cart.html
+++ b/cart.html
@@ -7,13 +7,15 @@
     <title>Cart</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="assets/css/app.css">
 </head>
 
 <body>
-    <main class="bg-primary">
+    <header class="bg-primary">
         <nav class="navbar navbar-expand-lg bg-primary container" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">eBooks</a>
+                <a class="navbar-brand" href="index.html">eBooks</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -22,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="books/index.html">Books</a>
@@ -39,7 +41,8 @@
                     </ul>
                     <ul class="d-flex navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="cart.html"><i class="bi bi-cart-fill" style="font-size: 1.2rem; color: white;"></i></a>
+                            <a class="nav-link active" href="cart.html"><i class="bi bi-cart-fill"
+                                    style="font-size: 1.2rem; color: white;"></i></a>
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-outline-light mx-4" href="login.html">Login</a>
@@ -51,8 +54,105 @@
                 </div>
             </div>
         </nav>
-    </main>
-    <h1>Cart</h1>
+    </header>
+    <!-- Cart Page Header -->
+    <header class="bg-primary text-white text-center py-5">
+        <div class="container">
+            <h1 class="display-4">Your Cart</h1>
+            <p class="lead">Review your selected books before proceeding to payment.</p>
+        </div>
+    </header>
+
+    <!-- Cart Items Section -->
+    <section class="py-5 min-vh-100">
+        <div class="container">
+            <div class="row">
+                <!-- Cart Items -->
+                <div class="col-lg-8">
+                    <h3 class="mb-4">Cart Items</h3>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Book</th>
+                                    <th scope="col">Quantity</th>
+                                    <th scope="col">Price</th>
+                                    <th scope="col">Total</th>
+                                    <th scope="col"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <strong>Book Title 1</strong><br>
+                                        <small>by Author Name</small>
+                                    </td>
+                                    <td><input type="number" class="form-control w-50" value="1"></td>
+                                    <td>$15.00</td>
+                                    <td>$15.00</td>
+                                    <td><button class="btn btn-danger btn-sm">Remove</button></td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <strong>Book Title 2</strong><br>
+                                        <small>by Author Name</small>
+                                    </td>
+                                    <td><input type="number" class="form-control w-50" value="2"></td>
+                                    <td>$10.00</td>
+                                    <td>$20.00</td>
+                                    <td><button class="btn btn-danger btn-sm">Remove</button></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <!-- Pricing Summary -->
+                <div class="col-lg-4">
+                    <div class="border p-3 mb-3 bg-light">
+                        <h4 class="mb-3">Order Summary</h4>
+                        <ul class="list-unstyled">
+                            <li class="d-flex justify-content-between">
+                                <span>Subtotal</span>
+                                <span>$35.00</span>
+                            </li>
+                            <li class="d-flex justify-content-between">
+                                <span>Tax (10%)</span>
+                                <span>$3.50</span>
+                            </li>
+                            <li class="d-flex justify-content-between fw-bold">
+                                <span>Total</span>
+                                <span>$38.50</span>
+                            </li>
+                        </ul>
+                        <button class="btn btn-primary w-100 mb-2">Proceed to Checkout</button>
+                        <button class="btn btn-secondary w-100">Continue Shopping</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="bg-dark py-3">
+        <div class="container">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <div class="col-md-4 d-flex align-items-center">
+                    <a href="/" class="mb-3 me-2 mb-md-0 text-white text-decoration-none lh-1">
+                        <svg class="bi" width="30" height="24">
+                            <use xlink:href="#bootstrap"></use>
+                        </svg>
+                    </a>
+                    <span class="mb-3 mb-md-0 text-white">© 2024 Company, Inc</span>
+                </div>
+
+                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+                    <li class="ms-3"><a class="text-white" href="#"><i class="bi bi-twitter"></i></a></li>
+                    <li class="ms-3"><a class="text-white" href="#"><i class="bi bi-instagram"></i></a></li>
+                    <li class="ms-3"><a class="text-white" href="#"><i class="bi bi-facebook"></i></a></li>
+                </ul>
+            </footer>
+        </div>
+    </div>
 </body>
 
 </html>
