--- a/login.html
+++ b/login.html
@@ -7,13 +7,14 @@
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <main class="bg-primary">
+    <div class="bg-primary">
         <nav class="navbar navbar-expand-lg bg-primary container" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">eBooks</a>
+                <a class="navbar-brand" href="index.html">eBooks</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -22,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="books/index.html">Books</a>
@@ -39,7 +40,8 @@
                     </ul>
                     <ul class="d-flex navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="cart.html"><i class="bi bi-cart-fill" style="font-size: 1.2rem; color: white;"></i></a>
+                            <a class="nav-link" href="cart.html"><i class="bi bi-cart-fill"
+                                    style="font-size: 1.2rem; color: white;"></i></a>
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-outline-light mx-4" href="login.html">Login</a>
@@ -51,8 +53,66 @@
                 </div>
             </div>
         </nav>
-    </main>
-    <h1>Login</h1>
+    </div>
+
+    <!-- Login Page Header -->
+    <header class="bg-primary text-white text-center py-5">
+        <div class="container">
+            <h1 class="display-4">Login</h1>
+            <p class="lead">Access your account and start reading your favorite books.</p>
+        </div>
+    </header>
+
+    <!-- Login Form Section -->
+    <section class="py-5 my-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title mb-4 text-center">Login to Your Account</h3>
+                            <form>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email Address</label>
+                                    <input type="email" class="form-control" id="email" placeholder="Enter your email"
+                                        required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Password</label>
+                                    <input type="password" class="form-control" id="password"
+                                        placeholder="Enter your password" required>
+                                </div>
+                                <button type="submit" class="btn btn-primary w-100">Login</button>
+                            </form>
+                            <p class="mt-3 text-center">Don't have an account? <a href="register.html">Sign up here</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="bg-dark py-3 mt-5">
+            <div class="container">
+                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                    <div class="col-md-4 d-flex align-items-center">
+                        <a href="/" class="mb-3 me-2 mb-md-0 text-white text-decoration-none lh-1">
+                            <svg class="bi" width="30" height="24">
+                                <use xlink:href="#bootstrap"></use>
+                            </svg>
+                        </a>
+                        <span class="mb-3 mb-md-0 text-white">© 2024 Company, Inc</span>
+                    </div>
+
+                    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+                        <li class="ms-3"><a class="text-white" href="#"><i class="bi bi-twitter"></i></a></li>
+                        <li class="ms-3"><a class="text-white" href="#"><i class="bi bi-instagram"></i></a></li>
+                        <li class="ms-3"><a class="text-white" href="#"><i class="bi bi-facebook"></i></a></li>
+                    </ul>
+                </footer>
+            </div>
+        </div>
 </body>
 
 </html>
