--- a/register.html
+++ b/register.html
@@ -7,13 +7,14 @@
     <title>Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <main class="bg-primary">
+    <header class="bg-primary">
         <nav class="navbar navbar-expand-lg bg-primary container" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">eBooks</a>
+                <a class="navbar-brand" href="index.html">eBooks</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -22,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="books/index.html">Books</a>
@@ -51,8 +52,71 @@
                 </div>
             </div>
         </nav>
-    </main>
-    <h1>Register</h1>
+    </header>
+
+    <!-- Registration Page Header -->
+<header class="bg-primary text-white text-center py-5">
+    <div class="container">
+      <h1 class="display-4">Create an Account</h1>
+      <p class="lead">Join us today and start enjoying our vast library of eBooks.</p>
+    </div>
+  </header>
+  
+  <!-- Registration Form Section -->
+  <section class="py-5">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title mb-4 text-center">Sign Up</h3>
+              <form>
+                <div class="mb-3">
+                  <label for="name" class="form-label">Full Name</label>
+                  <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email Address</label>
+                  <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                </div>
+                <div class="mb-3">
+                  <label for="password" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="password" placeholder="Create a password" required>
+                </div>
+                <div class="mb-3">
+                  <label for="confirm-password" class="form-label">Confirm Password</label>
+                  <input type="password" class="form-control" id="confirm-password" placeholder="Confirm your password" required>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Sign Up</button>
+              </form>
+              <p class="mt-3 text-center">Already have an account? <a href="login.html">Login here</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+    
+    <div class="bg-dark py-3">
+        <div class="container">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <div class="col-md-4 d-flex align-items-center">
+                    <a href="/" class="mb-3 me-2 mb-md-0 text-white text-decoration-none lh-1">
+                        <svg class="bi" width="30" height="24">
+                            <use xlink:href="#bootstrap"></use>
+                        </svg>
+                    </a>
+                    <span class="mb-3 mb-md-0 text-white">© 2024 Company, Inc</span>
+                </div>
+
+                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+                    <li class="ms-3"><a class="text-white" href="#"><i class="bi bi-twitter"></i></a></li>
+                    <li class="ms-3"><a class="text-white" href="#"><i class="bi bi-instagram"></i></a></li>
+                    <li class="ms-3"><a class="text-white" href="#"><i class="bi bi-facebook"></i></a></li>
+                </ul>
+            </footer>
+        </div>
+    </div>
 </body>
 
 </html>
