--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 
     <main class="container py-5">
         <h2 class="text-center mb-5 display-5">Featured Books</h2>
-        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4">
-            <!-- Book 1 -->
+        <div id="books" class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4">
+            <!-- Book 1
             <div class="col">
                 <div class="card h-100">
                     <img src="https://via.placeholder.com/200x120.png?text=Book+1" class="card-img-top" alt="Book 1">
@@ -133,7 +133,7 @@
                 </div>
             </div>
 
-            <!-- Book 2 -->
+            Book 2
             <div class="col">
                 <div class="card h-100">
                     <img src="https://via.placeholder.com/200x120.png?text=Book+2" class="card-img-top" alt="Book 2">
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <!-- Book 3 -->
+            <-- -----Book 3
             <div class="col">
                 <div class="card h-100">
                     <img src="https://via.placeholder.com/200x120.png?text=Book+3" class="card-img-top" alt="Book 3">
@@ -163,9 +163,9 @@
                         <a href="#" class="btn btn-success">Buy Now</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-            <!-- Book 4 -->
+            <!-- Book 4
             <div class="col">
                 <div class="card h-100">
                     <img src="https://via.placeholder.com/200x120.png?text=Book+4" class="card-img-top" alt="Book 4">
@@ -179,14 +179,14 @@
                         <a href="#" class="btn btn-success">Buy Now</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-            <!-- Book 5 -->
-            <div class="col">
-                <div class="card h-100">
+            <!-- Book 5
+            <div class="col"> -->
+                <!-- <div class="card h-100">
                     <img src="https://via.placeholder.com/200x120.png?text=Book+5" class="card-img-top" alt="Book 5">
-                    <div class="card-body">
-                        <h5 class="card-title">The Starlight Chronicles: Rise of the Fallen</h5>
+                    <div class="card-body"> --> 
+                        <!-- <h5 class="card-title">The Starlight Chronicles: Rise of the Fallen</h5>
                         <h6 class="card-subtitle mb-2 text-muted">by Jasper Quinn</h6>
                         <p class="card-text fw-bold">₹1665.83</p>
                     </div>
@@ -195,7 +195,7 @@
                         <a href="#" class="btn btn-success">Buy Now</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 py-5">
             <!-- Category 1 -->
@@ -329,7 +329,7 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
-            </div>
+            </div> 
         </div>
     </div>
 
@@ -338,7 +338,7 @@
         <h2 class="text-center mb-4">Enquiry Form</h2>
         <div class="row">
             <div class="col-12 col-md-9 col-lg-6 mx-auto mb-3">
-                <form>
+                <form method="post"  id="enquiry-form">
                     <div class="row">
                         <!-- First Name -->
                         <div class="col-md-6 mb-3">
@@ -426,7 +426,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
-
+<script type="module" src="assets/js/app.js"></script>
+<script type="module" src="assets/js/enquiry.js"></script>
 </body>
 
 </html>
