--- a/index.html
+++ b/index.html
@@ -345,13 +345,19 @@
                             <label for="firstName" class="form-label">First Name</label>
                             <input type="text" class="form-control" id="firstName" placeholder="Enter your first name"
                                 required>
+                                <div class="invalid-feedback">please enter a valid first name</div>
                         </div>
+                    </div>
+                    
 
                         <!-- Last Name -->
                         <div class="col-md-6 mb-3">
                             <label for="lastName" class="form-label">Last Name</label>
                             <input type="text" class="form-control" id="lastName" placeholder="Enter your last name"
                                 required>
+                                <div class="invalid-feedback">
+                                    please enter a valid last name
+                                </div>
                         </div>
                     </div>
 
